sdm660-common: Add GameBoost This a simple switcher for thermal-engine. After disabling it, we are in game boost mode.
Signed-off-by: HeroBuxx <herobuxx@conqueros.co>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -598,3 +598,11 @@ service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
 
 on property:dev.bootcomplete=1
     restart ril-daemon
+
+on property:service.game.boost=on
+    stop thermal-engine
+    setprop service.game.boost on_done
+
+on property:service.game.boost=off
+    start thermal-engine
+    setprop service.game.boost off_done
